revision(theme): changed to neutral color

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,5 @@
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": [
-    "scripts",
-    "src"
-  ]
+  "include": ["scripts", "src"]
 }
