--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "types": "tsc --noEmit"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@cloudflare/workers-types": "^4.20231218.0",
     "@types/node": "^20.11.2",
     "prettier": "^3.2.2",
