--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,22 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout code
-        uses: actions/checkout@v4
-      
-      - name: setup pnpm
-        uses: pnpm/action-setup@v4.0.0
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4.0.0
         with:
           version: 9.4.0
-      
-      - name: setup node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20.8.1
-          cache: 'pnpm'  # caches pnpm dependencies
+          cache: 'pnpm'
 
-      - name: install dependencies
-        run: pnpm install --frozen-lockfile  # installs dependencies
+      - run: pnpm install
+      - run: pnpm types
+      - run: pnpm lint
 
   test-secrets:
     runs-on: ubuntu-latest
