--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "prettier": "^3.2.2",
     "tsm": "^2.3.0",
     "typescript": "^5.3.3",
-    "wrangler": "^3.22.4"
+    "wrangler": "^4.4.0"
   },
   "dependencies": {
     "dotenv": "^16.4.0"
-  }
+  },
+  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af"
 }
